--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 annotated-types==0.7.0
-pydantic==2.7.4
-pydantic_core==2.18.4
+dnspython==2.6.1
+langid==1.1.6
+libpff-python==20231205
+numpy==2.0.0
+pydantic==2.8.2
+pydantic_core==2.20.1
+pyIsEmail==2.0.1
 typing_extensions==4.12.2
