--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,63 @@
 annotated-types==0.7.0
+asttokens==2.4.1
+cffi==1.16.0
+chardet==5.2.0
+comm==0.2.2
+contourpy==1.2.1
+cryptography==43.0.0
+cycler==0.12.1
+debugpy==1.8.2
+decorator==5.1.1
 dnspython==2.6.1
+et-xmlfile==1.1.0
+executing==2.0.1
+fonttools==4.53.1
 greenlet==3.0.3
+ipykernel==6.29.5
+ipython==8.26.0
+ipywidgets==8.1.3
+jedi==0.19.1
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+jupyterlab_widgets==3.0.11
+kiwisolver==1.4.5
 langid==1.1.6
 libpff-python==20231205
+matplotlib==3.9.1
+matplotlib-inline==0.1.7
+nest-asyncio==1.6.0
 numpy==2.0.0
+openpyxl==3.1.5
+packaging==24.1
 pandas==2.2.2
+parso==0.8.4
+pexpect==4.9.0
+pillow==10.4.0
+platformdirs==4.2.2
+prompt_toolkit==3.0.47
+psutil==6.0.0
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycparser==2.22
 pydantic==2.8.2
 pydantic_core==2.20.1
+Pygments==2.18.0
 pyIsEmail==2.0.1
 pymongo==4.8.0
 PyMySQL==1.1.1
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
 pytz==2024.1
+pyzmq==26.0.3
+seaborn==0.13.2
+six==1.16.0
 SQLAlchemy==2.0.31
-tzdata==2024.1
+stack-data==0.6.3
+tornado==6.4.1
 tqdm==4.66.4
+traitlets==5.14.3
+typing_extensions==4.12.2
+tzdata==2024.1
+wcwidth==0.2.13
+widgetsnbextension==4.0.11
+XlsxWriter==3.2.0
