--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ et-xmlfile==1.1.0
 executing==2.0.1
 fonttools==4.53.1
 greenlet==3.0.3
+html2text==2024.2.26
 ipykernel==6.29.5
 ipython==8.26.0
 ipywidgets==8.1.3
