--- a/config.json
+++ b/config.json
@@ -1,4 +1,9 @@
 {
+    "use_ollama": false,
+    "llm_model_name": "microsoft/Phi-3-mini-4k-instruct",
+    "embedding_model_name": "all-MiniLM-L6-v2",
+    "pst_directory": "../../data/raw",
+    "output_directory": "../../data/processed",
     "db_host": "localhost",
     "db_user": "rw_06831",
     "db_password": "Nbo4Vinay#01",
